# kaizen

./: .gitignore  Dockerfile  LICENSE  README.md  action.yml  commit_message.txt  pyproject.toml
.github/workflows/: kaizen.yml  publish.yml
kaizen/: __init__.py  main.py
